# OOP2_Basic_Linux

./: .gitignore  CMakeLists.txt
Basic/: Basic.cpp  evalstate.cpp  exp.cpp  exp.h  program.cpp  program.h  statement.cpp  statement.h
