cmake_minimum_required(VERSION 3.15)
project(code)

set(CMAKE_CXX_STANDARD 14)

add_executable(code
        #main.cpp
        Basic/Basic.cpp
        Basic/evalstate.h
        Basic/evalstate.cpp
        Basic/exp.h
        Basic/exp.cpp
        Basic/parser.h
        Basic/parser.cpp
        Basic/program.h
        Basic/parser.cpp
        Basic/program.h
        Basic/program.cpp
        Basic/statement.h
        Basic/statement.cpp
        StanfordCPPLib/direction.cpp
        StanfordCPPLib/direction.h
        StanfordCPPLib/error.cpp
        StanfordCPPLib/error.h
        StanfordCPPLib/foreach.h
        #StanfordCPPLib/ginteractors.cpp
        #StanfordCPPLib/ginteractors.h
        StanfordCPPLib/gmath.cpp
        StanfordCPPLib/gmath.h
        #StanfordCPPLib/gobjects.cpp
        #StanfordCPPLib/gobjects.h
        StanfordCPPLib/graph.h
        StanfordCPPLib/grid.h
        #StanfordCPPLib/gtimer.cpp
        #StanfordCPPLib/gtimer.h
        StanfordCPPLib/gtypes.cpp
        StanfordCPPLib/gtypes.h
        StanfordCPPLib/hashmap.cpp
        StanfordCPPLib/hashmap.h
        StanfordCPPLib/hashset.h
        StanfordCPPLib/lexicon.cpp
        StanfordCPPLib/lexicon.h
        #StanfordCPPLib/main.cpp
        StanfordCPPLib/map.h
        StanfordCPPLib/point.cpp
        StanfordCPPLib/point.h
        StanfordCPPLib/pqueue.h
        StanfordCPPLib/queue.h
        StanfordCPPLib/random.cpp
        StanfordCPPLib/random.h
        StanfordCPPLib/set.h
        StanfordCPPLib/simpio.cpp
        StanfordCPPLib/simpio.h
        StanfordCPPLib/stack.h
        #StanfordCPPLib/startup.cpp
        StanfordCPPLib/strlib.cpp
        StanfordCPPLib/strlib.h
        #StanfordCPPLib/thread.cpp
        #StanfordCPPLib/thread.h
        StanfordCPPLib/tokenscanner.cpp
        StanfordCPPLib/tokenscanner.h
        StanfordCPPLib/vector.h)
        #Basic/MyFunction.h
        #Basic/MyFunction.cpp)
